[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/models/night_ghost/night_ghost.scn" type="PackedScene" id=1]
[ext_resource path="res://assets/models/night_ghost/night_ghost_anim_tree.res" type="AnimationNodeBlendTree" id=2]
[ext_resource path="res://assets/models/night_ghost/night_ghost/running-loop.tres" type="Animation" id=3]
[ext_resource path="res://assets/models/night_ghost/night_ghost/jump.tres" type="Animation" id=4]
[ext_resource path="res://assets/models/night_ghost/night_ghost/idle-loop.tres" type="Animation" id=5]
[ext_resource path="res://assets/models/night_ghost/night_ghost/walk-loop.tres" type="Animation" id=6]
[ext_resource path="res://assets/models/night_ghost/night_ghost/landing.tres" type="Animation" id=7]
[ext_resource path="res://assets/models/night_ghost/night_ghost/falling-loop.tres" type="Animation" id=8]
[ext_resource path="res://assets/models/night_ghost/night_ghost/walk_forward-loop.tres" type="Animation" id=9]
[ext_resource path="res://assets/models/night_ghost/night_ghost/run-loop.tres" type="Animation" id=10]
[ext_resource path="res://assets/models/night_ghost/night_ghost/run_forward_loop.tres" type="Animation" id=11]
[ext_resource path="res://assets/sounds/player/step_right.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/player/step_left.mp3" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/player/whip_jump.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/player/jump-on-wood_cut.mp3" type="AudioStream" id=15]
[ext_resource path="res://game/player/player_core.gd" type="Script" id=24]
[ext_resource path="res://assets/sounds/player/metal_footstep_3.wav" type="AudioStream" id=26]
[ext_resource path="res://assets/sounds/player/metal_footstep_2.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sounds/player/metal_footstep_1.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/sounds/player/fire_grapplinghook.wav" type="AudioStream" id=29]
[ext_resource path="res://assets/sounds/player/release_grapplinghook.wav" type="AudioStream" id=30]
[ext_resource path="res://assets/sounds/player/fire_grapplinghook1.mp3" type="AudioStream" id=32]
[ext_resource path="res://assets/sounds/player/teleport_1.mp3" type="AudioStream" id=33]
[ext_resource path="res://assets/sounds/player/toggleLight_1.wav" type="AudioStream" id=35]

[sub_resource type="CylinderShape" id=1]
radius = 0.8
height = 4.0

[node name="PlayerCore" type="KinematicBody"]
script = ExtResource( 24 )

[node name="Model" parent="." instance=ExtResource( 1 )]

[node name="Sound_Jump" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 14 )
attenuation_filter_cutoff_hz = 20500.0

[node name="Sound_Land" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 15 )
attenuation_filter_cutoff_hz = 20500.0

[node name="Sound_Metal_Footstep_1" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 28 )

[node name="Sound_Metal_Footstep_2" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 27 )

[node name="Sound_Metal_Footstep_3" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 26 )

[node name="Sound_Shoot_GrapplingHook_1" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 29 )
attenuation_filter_cutoff_hz = 20500.0

[node name="Sound_Shoot_GrapplingHook_2" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 32 )
attenuation_filter_cutoff_hz = 20500.0

[node name="Sound_Release_GrapplingHook" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 30 )
attenuation_filter_cutoff_hz = 20500.0

[node name="Sound_Teleport_1" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 33 )
attenuation_filter_cutoff_hz = 20500.0

[node name="Sound_ToggleLight_1" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 35 )
attenuation_filter_cutoff_hz = 20500.0

[node name="Sound_Footstep_Left" type="AudioStreamPlayer3D" parent="Model"]
stream = ExtResource( 13 )
attenuation_filter_cutoff_hz = 20500.0

[node name="Sound_Footstep_Right" type="AudioStreamPlayer3D" parent="Model"]
transform = Transform( 0.181818, 0, 0, 0, 0.181818, 0, 0, 0, 0.181818, 0, 0, 0 )
stream = ExtResource( 12 )
attenuation_filter_cutoff_hz = 20500.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Model")
anims/falling-loop = ExtResource( 8 )
anims/idle-loop = ExtResource( 5 )
anims/jump = ExtResource( 4 )
anims/landing = ExtResource( 7 )
anims/run-loop = ExtResource( 10 )
anims/run_forward_loop = ExtResource( 11 )
anims/running-loop = ExtResource( 3 )
anims/walk-loop = ExtResource( 6 )
anims/walk_forward-loop = ExtResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource( 2 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Blend3/blend_amount = 0
parameters/air_transition/current = 1
parameters/falling_scale/scale = 1.0
parameters/iwr_blend/blend_amount = -1.0
parameters/jump_scale/scale = 2.0
parameters/landing_scale/scale = 1.0
parameters/run_scale/scale = 1.0
parameters/walk_scale/scale = 1.0

[node name="MoveNetworkTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.769087, 0 )
visible = false
light_energy = 5.194
shadow_color = Color( 1, 1, 1, 1 )
omni_range = 2.23

[connection signal="timeout" from="MoveNetworkTimer" to="." method="_on_MoveNetworkTimer_timeout"]
